# LearnAudioDevelopment

./: README.md
1_AudioRecoder/AudioRecorderDemo/: settings.gradle
1_AudioRecoder/AudioRecorderDemo/app/: build.gradle
1_AudioRecoder/AudioRecorderDemo/app/src/androidTest/java/com/baishengye/audiorecorderdemo/: ExampleInstrumentedTest.kt
1_AudioRecoder/AudioRecorderDemo/app/src/main/: AndroidManifest.xml
1_AudioRecoder/AudioRecorderDemo/app/src/main/java/com/baishengye/audiorecorderdemo/: AccByAudioRecordMediaCodecAndAudioTrackMediaExtractorActivity.kt  AccByAudioRecordMediaCodecAndMediaPlayerActivity.kt  LameTestActivity.kt  MP3ByLameAndMediaPlayerActivity.kt  MainActivity.kt  PcmActivity.kt  PcmByAudioRecordAndAudioTrackActivity.kt  WavActivity.kt  WavByAudioRecordAndAudioTrackActivity.kt  WavByAudioRecordAndMediaPlayerActivity.kt
1_AudioRecoder/AudioRecorderDemo/app/src/main/res/layout/: activity_lame_test.xml  activity_main.xml  activity_pcm.xml  activity_wav.xml  item_audio_file.xml
1_AudioRecoder/AudioRecorderDemo/app/src/main/res/values/: themes.xml
1_AudioRecoder/AudioRecorderDemo/app/src/main/res/values-night/: themes.xml
1_AudioRecoder/AudioRecorderDemo/app/src/test/java/com/baishengye/audiorecorderdemo/: ExampleUnitTest.kt
1_AudioRecoder/AudioRecorderDemo/gradle/wrapper/: gradle-wrapper.properties
1_AudioRecoder/AudioRecorderDemo/libaudio/: build.gradle
1_AudioRecoder/AudioRecorderDemo/libaudio/src/androidTest/java/com/baishengye/libaudio/: ExampleInstrumentedTest.kt
1_AudioRecoder/AudioRecorderDemo/libaudio/src/test/java/com/baishengye/libaudio/: ExampleUnitTest.kt
1_AudioRecoder/AudioRecorderDemo/libbase/: build.gradle
1_AudioRecoder/AudioRecorderDemo/libbase/src/main/: AndroidManifest.xml
1_AudioRecoder/AudioRecorderDemo/liblame/: CMakeLists.txt  build.gradle
1_AudioRecoder/AudioRecorderDemo/liblame/src/androidTest/java/com/baishengye/liblame/: ExampleInstrumentedTest.kt
1_AudioRecoder/AudioRecorderDemo/liblame/src/main/java/com/baishengye/liblame/: LameBuilder.kt  LameLoader.java  LameLoader.kt
1_AudioRecoder/AudioRecorderDemo/liblame/src/main/java/com/baishengye/liblame/record/: AudioChunk.kt  BaseAudioRecordHelper.kt  MP3EncodeThread.kt  PullTransport.kt  RecordHelper.kt
1_AudioRecoder/AudioRecorderDemo/liblame/src/main/java/com/baishengye/liblame/record/encode/: AudioEncodingFormat.kt  MediaRecordException.kt  MediaRecordState.kt
1_AudioRecoder/AudioRecorderDemo/liblame/src/main/java/com/baishengye/liblame/record/pcm/: Mp3RecordHelper.kt  PcmEncodeConfig.kt
1_AudioRecoder/AudioRecorderDemo/liblame/src/main/jni/lame/cpp/: LameLoader.cpp  LameLoader.h  com_baishengye_liblame_LameLoader.h
1_AudioRecoder/AudioRecorderDemo/liblame/src/main/jni/lame/include/: lame.h
1_AudioRecoder/AudioRecorderDemo/liblame/src/main/jni/lame/libmp3lame/: VbrTag.c  bitstream.c  encoder.c  fft.c  gain_analysis.c  id3tag.c  lame.c  mpglib_interface.c  newmdct.c  presets.c  psymodel.c  quantize.c  quantize_pvt.c  reservoir.c  set_get.c  set_get.h  tables.c  takehiro.c  util.c  util.h  vbrquantize.c  version.c
1_AudioRecoder/AudioRecorderDemo/liblame/src/main/jni/lame/libmp3lame/i386/: nasm.h
1_AudioRecoder/AudioRecorderDemo/liblame/src/main/jni/lame/libmp3lame/vector/: xmm_quantize_sub.c
1_AudioRecoder/AudioRecorderDemo/liblame/src/main/jni/lame/mpglib/: common.c  decode_i386.c  interface.c  layer1.c  layer2.c  layer3.c  mpg123.h  mpglib.h  tabinit.c
1_AudioRecoder/AudioRecorderDemo/liblame/src/test/java/com/baishengye/liblame/: ExampleUnitTest.kt
1_AudioRecoder/AudioRecorderDemo/libopensl/: build.gradle
1_AudioRecoder/AudioRecorderDemo/libopensl/src/main/cpp/: CMakeLists.txt
1_AudioRecoder/AudioRecorderDemo/libopensl/src/main/cpp/opensl/head/: AudioBuffer.h  AudioRecorder.h
1_AudioRecoder/AudioRecorderDemo/libopensl/src/main/cpp/opensl/source/: AndroidLog.hpp  AudioBuffer.cpp  AudioEngine.hpp  AudioRecord.cpp  OpenslLoader.hpp
1_AudioRecoder/AudioRecorderDemo/libutil/: build.gradle
1_AudioRecoder/markdown/: 音频.md
(+80 files in other folders)
